# cmake_example

./: CMakeLists.txt  setup.py
includes/: example_1.h  example_2.h  example_3.h  example_4.h  example_5.h  example_6.h  example_7.h  example_8.h  example_9_matrix.h  pybind_matrix.h
src/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_7.cpp  example_8.cpp  example_9.cpp  main.cpp
tests/: test.py  test_example_1.py  test_example_1_pytest.py  test_example_2_pytest.py  test_example_3_pytest.py  test_example_4_pytest.py  test_example_5_pytest.py  test_example_6_pytest.py  test_example_7_pytest.py  test_example_8_pytest.py  test_example_9_pytest.py
